feat(rl): add PPO training pipeline and WumpusAgent inference
- Squash merged from feat/task-004
- See branch history for individual commits

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,windows,react,node,macos
+
+# Hunter Wumpus trained model artifacts
+backend/models/
