--- a/mypy.ini
+++ b/mypy.ini
@@ -9,3 +9,15 @@ ignore_missing_imports = True
 
 [mypy-torch.*]
 ignore_missing_imports = True
+
+[mypy-pytest]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
+ignore_missing_imports = True
+
+[mypy-gymnasium]
+ignore_missing_imports = True
+
+[mypy-gymnasium.*]
+ignore_missing_imports = True
